# ferc-xbrl-extractor

./: .codecov.yml  .gitignore  .mypy.ini  .pre-commit-config.yaml  .readthedocs.yml  .secrets.baseline  .taplo.toml  AGENTS.md  LICENSE.txt  MANIFEST.in  README.md  README.rst  environment.yml  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml  release.yml
.github/workflows/: bot-auto-merge.yml  docs.yml  pytest.yml  release.yml  tox-pytest.yml
docs/: conf.py  extract.rst  glossary.rst  index.rst  release_notes.rst
docs/_templates/: llms-txt-link.html
examples/: lost_fact_exploration.ipynb
notebooks/: extract_fuel.ipynb  extract_steam.ipynb  respondent_id_map.ipynb  respondent_map.csv
scripts/: pyrefly_coverage_summary.py
src/: xbrl_taxonomy.py
src/ferc_xbrl_extractor/: __init__.py  arelle_interface.py  cli.py  datapackage.py  helpers.py  instance.py  settings.py  taxonomy.py  xbrl.py
src/xbrl/: xbrl.py  xbrl_taxonomy.py
src/xbrl_extract/: archive.py  arelle_interface.py  cli.py  datapackage.py  helpers.py  instance.py  taxonomy.py  xbrl.py
src/xbrl_extract.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  arelle_interface_test.py  console_scripts_test.py  data_quality_test.py  datapackage_test.py  lost_facts_test.py  xbrl_test.py
tests/unit/: __init__.py  arelle_interface_test.py  cli_test.py  datapackage_test.py  instance_test.py  taxonomy_test.py  xbrl_test.py
