[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=66", "setuptools_scm[toml]>=3.5.0", "wheel"]

[project]
name = "catalystcoop.ferc_xbrl_extractor"
description = "A tool for extracting data from FERC XBRL Filings."
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "Catalyst Cooperative", email = "pudl@catalyst.coop" },
    { name = "Zach Schira", email = "zach.schira@catalyst.coop" },
]
requires-python = ">=3.10,<3.14"
dynamic = ["version"]
license = { file = "LICENSE.txt" }
dependencies = [
    "arelle-release>=2.3,<3",
    "coloredlogs>=14.0,<15.1",
    "frictionless>=5,<6",
    "lxml>=4.9.1,<6",
    "numpy>=1.16,<3",
    "pandas>=1.5,<3",
    "pyarrow>=14.0.1", # required starting in pandas 3.0
    "pydantic>=2,<3",
    "sqlalchemy>=1.4,<3",
    "stringcase>=1.2,<2",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
keywords = [
    "accounting",
    "data",
    "electricity",
    "energy",
    "federal energy regulatory commission",
    "ferc",
    "finance",
    "gas",
    "natural gas",
    "oil",
    "regulation",
    "utility",
    "xbrl",
]

[project.urls]
"Homepage" = "https://github.com/catalyst-cooperative/ferc-xbrl-extractor"
"Source" = "https://github.com/catalyst-cooperative/ferc-xbrl-extractor"
"Documentation" = "https://catalystcoop-ferc-xbrl-extractor.readthedocs.io"
"Issue Tracker" = "https://github.com/catalyst-cooperative/ferc-xbrl-extractor/issues"

[project.scripts]
xbrl_extract = "ferc_xbrl_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "build>=1.0,<1.3",
    "ruff>=0.5.0,<0.12", # A very fast linter and autofixer
    "tox>=4.16.0,<4.26", # Python test environment manager
    "twine>=3.3,<6.2", # Used to make releases to PyPI
]
docs = [
    "doc8>=1.0,<1.2", # Ensures clean documentation formatting
    "furo>=2022.4.7",
    "sphinx>=4,!=5.1.0,<8.3", # The default Python documentation engine
    "sphinx-autoapi>=3.1.2,<3.7", # Generates documentation from docstrings
    "sphinx-issues>=1.2,<5.1", # Allows references to GitHub issues
]
tests = [
    "coverage>=5.3,<7.9", # Lets us track what code is being tested
    "doc8>=1.0,<1.2", # Ensures clean documentation formatting
    "mypy>=1.0,<1.16", # Static type checking
    "pre-commit>=4,<5", # Allow us to run pre-commit hooks in testing
    "pydocstyle>=5.1,<6.4", # Style guidelines for Python documentation
    "pytest>=6.2,<8.4", # Our testing framework
    "pytest-console-scripts>=1.1,<1.5", # Allow automatic testing of scripts
    "pytest-cov>=2.10,<6.2", # Pytest plugin for working with coverage
    "pytest-mock>=3.0,<3.15",
    "ruff>=0.5.0,<0.12", # A very fast linter and autofixer
    "tox>=4.16.0,<4.26", # Python test environment manager
]
types = ["types-setuptools"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[tool.ruff]
# Configurations that apply to both the `format` and `lint` subcommands.
target-version = "py313"
line-length = 88
indent-width = 4

[tool.ruff.format]
# Configuration specfic to the `format` subcommand.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    # "ARG", # unused arguments
    # "B",  # flake8-bugbear
    "C", # Limit cyclomatic complexity using mccabe
    "D", # pydocstyle errors
    "E", # pycodestyle errors
    "EXE", # executable file issues
    # "ERA", # eradicate: find commented out code
    "F", # pyflakes
    "I", # isort
    "ISC", # implicit string concatenation
    "N", # pep8-naming
    "NPY", # NumPy specific checks
    "PD", # pandas checks
    "PGH", # pygrep-hooks
    # "PL",  # pylint
    # "PT",  # pytest style
    "PTH", # use pathlib
    "Q", # flake8-quotes
    "RET", # check return values
    "RSE", # unnecessary parenthises on raised exceptions
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    # "T",   # print statements found
    "UP", # pyupgrade (use modern python syntax)
    "W", # pycodestyle warnings
]
ignore = [
    "D401", # Require imperative mood in docstrings.
    "D417",
    "E501", # Overlong lines.
    "E203", # Space before ':' (black recommends to ignore)
    "ISC001", # implicit string concatenation
    "PD003", # Use of isna rather than isnull
    "PD004", # Use of notna rather than notnull
    "PD008", # Use of df.at[] rather than df.loc[]
    "PD010", # Use of df.stack()
    "PD013", # Use of df.unstack()
    "PD015", # Use of pd.merge() rather than df.merge()
    "PD901", # df as variable name
    "RET504", # Ignore unnecessary assignment before return
    "S101", # Use of assert
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["ferc_xbrl_extractor"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.doc8]
max-line-length = 88
ignore-path = ["docs/_build"]

[tool.pytest.ini_options]
testpaths = "./"
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:Creating a LegacyVersion:DeprecationWarning:pkg_resources[.*]",
    "ignore:The `update_forward_refs` method is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil.tz",
]

addopts = "--verbose"
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = "true"
log_cli_level = "INFO"
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL", "ELLIPSIS"]
