[build-system]
build-backend = "hatchling.build"
requires = ["hatchling>=1.31", "hatch-vcs>=0.5"]

[project]
name = "catalystcoop.ferc_xbrl_extractor"
description = "A tool for extracting data from FERC XBRL Filings."
readme = { file = "README.rst", content-type = "text/x-rst" }
authors = [
    { name = "Catalyst Cooperative", email = "pudl@catalyst.coop" },
    { name = "Zach Schira", email = "zach.schira@catalyst.coop" },
]
requires-python = ">=3.11,<3.15.0a0"
dynamic = ["version"]
license = { file = "LICENSE.txt" }
dependencies = [
    "arelle-release>=2.32",
    "coloredlogs>=14.0",
    "duckdb>=1.3.2",
    "frictionless>=5,<6",
    "lxml>=4.9.1",
    "numpy>=1.16,<3",
    "pandas>=1.5",
    "pyarrow>=14.0.1", # required starting in pandas 3.0
    "pydantic>=2,<3",
    "sqlalchemy>=1.4,<3",
    "stringcase>=1.2",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "accounting",
    "data",
    "electricity",
    "energy",
    "federal energy regulatory commission",
    "ferc",
    "finance",
    "gas",
    "natural gas",
    "oil",
    "regulation",
    "utility",
    "xbrl",
]

[project.urls]
"Homepage" = "https://github.com/catalyst-cooperative/ferc-xbrl-extractor"
"Source" = "https://github.com/catalyst-cooperative/ferc-xbrl-extractor"
"Documentation" = "https://docs.catalyst.coop/ferc-xbrl-extractor"
"Issue Tracker" = "https://github.com/catalyst-cooperative/ferc-xbrl-extractor/issues"

[project.scripts]
xbrl_extract = "ferc_xbrl_extractor.cli:main"

[project.optional-dependencies]
dev = [
    "hatch>=1.16",
    "prek>=0.4.10", # Fast Rust-based pre-commit hook runner
    "ruff>=0.15.22", # A very fast linter and autofixer
]
docs = [
    "doc8>=2", # Ensures clean documentation formatting
    "pydata-sphinx-theme>=0.20", # Shared look-and-feel with our other docs sites
    "sphinx>=9", # The default Python documentation engine
    "sphinx-autoapi>=3", # Generates documentation from docstrings
    "sphinx-issues>=5", # Allows references to GitHub issues
    "sphinx-llm>=0.4.1", # Generates llms.txt and markdown twins of each page for agents
]
tests = [
    "coverage>=7.15", # Lets us track what code is being tested
    "doc8>=2", # Ensures clean documentation formatting
    "pytest>=9.1.1", # Our testing framework
    "pytest-console-scripts>=1.4.1", # Allow automatic testing of scripts
    "pytest-cov>=7.1", # Pytest plugin for working with coverage
    "pytest-mock>=3.15",
    "pytest-xdist>=3.8", # Run tests in parallel across worker processes
    "ruff>=0.15.22", # A very fast linter and autofixer
]
types = [
    "lxml-stubs>=0.5", # Type stubs for lxml, which ships without inline types
    "ty>=0.0.61", # Extremely fast Rust-based Python type checker, from Astral
]

[tool.uv]
# Always use a uv-managed Python distribution -- never one discovered on the system
# (Homebrew, apt, pyenv, etc.) -- and fetch it automatically if the pinned version
# (see .python-version) isn't installed yet. Keeps local dev and CI reproducible
# without relying on actions/setup-python or whatever happens to be on PATH.
python-preference = "only-managed"
python-downloads = "automatic"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/ferc_xbrl_extractor/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ferc_xbrl_extractor"]

[tool.hatch.envs.default]
description = "Default environment with all development dependencies"
features = ["dev", "docs", "tests", "types"]
# Delegate venv creation and package installation to uv rather than pip/virtualenv.
# Hatch still resolves *which* interpreter to hand uv (see the `python` pin below),
# but once resolved, this makes uv do the actual venv creation and installs, and lets
# HATCH_PYTHON (set to a `uv python find` path in CI) bypass Hatch's own PATH
# discovery entirely -- see AGENTS.md and .github/workflows/*.yml.
installer = "uv"
python = "3.14"

[tool.hatch.envs.test]
description = "Run tests with pytest and collect test coverage"
features = ["tests"]

[tool.hatch.envs.test.scripts]
coverage-erase = "coverage erase"
# --cov-fail-under=0 overrides [tool.coverage.report] fail_under for these individual
# invocations, since neither the unit nor the integration suite alone is expected to
# clear the combined threshold -- it's enforced once below, after both have
# contributed to the same coverage data via --cov-append.
unit = "pytest --cov=src/ferc_xbrl_extractor --cov=tests --cov-append --cov-fail-under=0 --no-cov-on-fail --doctest-modules src/ferc_xbrl_extractor tests/unit {args}"
# -n auto (pytest-xdist) parallelizes across worker processes -- only on integration,
# where individual tests actually take seconds; unit is fast enough (~2s total) that
# worker startup overhead (each one re-imports arelle et al.) would net lose. The
# tests parallelized this way each cap their own internal extraction concurrency
# (workers=1) rather than also spawning a per-test process pool -- see comments in
# tests/integration/data_quality_test.py and console_scripts_test.py.
integration = "pytest -n auto --cov=src/ferc_xbrl_extractor --cov=tests --cov-append --cov-fail-under=0 --no-cov-on-fail tests/integration {args}"
coverage-report = ["coverage report", "coverage xml"]
all = ["coverage-erase", "unit", "integration", "coverage-report"]

[tool.hatch.envs.lint]
description = "Run linters and formatters"
features = ["tests"]
detached = true
# `detached` makes this its own template root, so it doesn't inherit `installer`/
# `python` from [tool.hatch.envs.default] -- repeat them here.
installer = "uv"
python = "3.14"

[tool.hatch.envs.lint.scripts]
check = ["ruff check ./", "ruff format --check ./"]
format = ["ruff format ./", "ruff check --fix ./"]
all = ["check", "format"]

[tool.hatch.envs.types]
description = "Type check the code with ty"
# Not detached, unlike the lint env above -- ty needs the project's actual runtime
# dependencies (pydantic, pandas, etc.) installed to resolve imports, not just its
# own tooling, so this env installs the project itself plus the "types" extra. Also
# includes "tests" since [tool.ty.src] type checks the tests/ directory too, and
# those tests import pytest, pytest-mock, etc.
features = ["tests", "types"]

[tool.hatch.envs.types.scripts]
check = "ty check"

[tool.hatch.envs.docs]
description = "Build documentation with Sphinx"
features = ["docs"]

[tool.hatch.envs.docs.scripts]
check = "doc8 docs/ README.rst"
clean = "rm -rf docs/_build"
build = ["clean", "check", "sphinx-build -W -b html docs docs/_build/html"]

[tool.ruff]
# Configurations that apply to both the `format` and `lint` subcommands.
target-version = "py313"
line-length = 88
indent-width = 4
extend-exclude = ["src/ferc_xbrl_extractor/_version.py"]

[tool.ruff.format]
# Configuration specfic to the `format` subcommand.
# We use black compatible formatting.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "A", # flake8-builtins
    # "ARG", # unused arguments
    # "B",  # flake8-bugbear
    "C", # Limit cyclomatic complexity using mccabe
    "D", # pydocstyle errors
    "E", # pycodestyle errors
    "EXE", # executable file issues
    # "ERA", # eradicate: find commented out code
    "F", # pyflakes
    "I", # isort
    "ISC", # implicit string concatenation
    "N", # pep8-naming
    "NPY", # NumPy specific checks
    "PD", # pandas checks
    "PGH", # pygrep-hooks
    # "PL",  # pylint
    # "PT",  # pytest style
    "PTH", # use pathlib
    "Q", # flake8-quotes
    "RET", # check return values
    "RSE", # unnecessary parenthises on raised exceptions
    "S", # flake8-bandit
    "SIM", # flake8-simplify
    # "T",   # print statements found
    "UP", # pyupgrade (use modern python syntax)
    "W", # pycodestyle warnings
]
ignore = [
    "D401", # Require imperative mood in docstrings.
    "D417",
    "E501", # Overlong lines.
    "E203", # Space before ':' (black recommends to ignore)
    "ISC001", # implicit string concatenation
    "PD003", # Use of isna rather than isnull
    "PD004", # Use of notna rather than notnull
    "PD008", # Use of df.at[] rather than df.loc[]
    "PD010", # Use of df.stack()
    "PD013", # Use of df.unstack()
    "PD015", # Use of pd.merge() rather than df.merge()
    "RET504", # Ignore unnecessary assignment before return
    "S101", # Use of assert
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
multiline-quotes = "double"

[tool.ruff.lint.isort]
known-first-party = ["ferc_xbrl_extractor"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] # Ignore unused imports
"tests/*" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.coverage.run]
# Measure coverage of tests/ as well as src/, not just to gauge how much of the
# library is tested but to catch test files/functions that silently never run (e.g.
# a typo'd test_ prefix, or a test class pytest doesn't collect) -- those show up as
# 0% covered files/lines here instead of just quietly not existing in the report.
source = ["src/ferc_xbrl_extractor", "tests"]
omit = ["src/ferc_xbrl_extractor/_version.py"]
relative_files = true

[tool.coverage.report]
precision = 2
sort = "miss"
skip_empty = true
fail_under = 99
# fail_under is enforced once, after unit and integration coverage are combined, by
# the final "coverage report" invocation in the `all` hatch script under
# [tool.hatch.envs.test.scripts] above -- not here, since pytest-cov would otherwise
# also enforce it after unit or integration tests run on their own (hence
# --cov-fail-under=0 on those individual invocations), before the other suite gets a
# chance to contribute its coverage.
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Stuff that's not expected to run normally...
    "logger.debug",
]

[tool.doc8]
max-line-length = 88
ignore-path = ["docs/_build"]

[tool.ty.src]
include = ["src", "tests"]

# No [tool.ty.environment] python-version setting -- ty already infers it from
# `project.requires-python` above, so pinning it again here would just be tracking
# the same version in two places.

[tool.pytest]
testpaths = ["./"]
filterwarnings = [
    "ignore:distutils Version classes are deprecated:DeprecationWarning",
    "ignore:Creating a LegacyVersion:DeprecationWarning:pkg_resources[.*]",
    "ignore:The `update_forward_refs` method is deprecated:pydantic.PydanticDeprecatedSince20:pydantic.main",
    "ignore:datetime.datetime.utcfromtimestamp\\(\\) is deprecated:DeprecationWarning:dateutil.tz",
]

addopts = ["--verbose"]
log_format = "%(asctime)s [%(levelname)8s] %(name)s:%(lineno)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_cli_level = "INFO"
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "IGNORE_EXCEPTION_DETAIL",
    "ELLIPSIS",
]
